src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@800&display=swap');

* {
  margin: 0;
  padding: 0;
}

body {
  box-sizing: border-box;
  background-color: #000;
  font-family: 'Inter', sans-serif;
  overflow-x: hidden;
}

.navbar {
  max-width: 100%;
  padding: 3.5em;
  display: flex;
  align-items: center;
  justify-content: left;
  user-select: none;
  gap: 3em;
}

.navbar--item {
  transition: all 0.15s;
  color: rgba(255, 255, 255, 0.36);
  font-size: 20px;
  font-weight: 500;
  line-height: 102.523%;
  letter-spacing: 0.75px;
  text-underline-offset: 3px;
}

.navbar--item:hover {
  color: rgba(255, 255, 255, 0.507);
}

.blob {
  position: absolute;
  animation: rotate 7s alternate infinite ease;
  width: 500px;
  height: 500px;
  border-radius: 50%;
  filter: blur(85px);
  z-index: -1;
  transition: 1s background-color ease;
}

.hero {
  height: 75vh;
  display: flex;
}

.hero--name {
  display: flex;
  height: 100%;
  width: 50%;
  align-items: center;
  justify-content: center;
}

.hero--name img {
  -webkit-user-drag: none;
  user-select: none;
}

.hero--skills {
  width: 50%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero--skills--grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    width: 60%;
    height: 60%;
    transform: rotate(-15deg);
}

.hero--skills--grid img {
  transform: rotate(15deg);
  width: 120px;
  filter: drop-shadow(10px 15px 5px rgba(0,0,0,0.1));
  user-select: none;
  -webkit-user-drag: none;
}

.about {
  margin-block: 2vh;
  text-align: center;
  height: 100vh;
}

.section--title {
  color: rgba(194, 194, 194, 0.36);
  text-align: center;
  font-family: Inter, sans-serif;
  font-size: 52px;
  font-weight: 600;
  line-height: 102.523%;
  letter-spacing: 2.07px;
  text-decoration-line: underline;
  text-underline-offset: 7px;
}

.about--facts {
  padding: 9vh 25vw;
  display: grid; 
  grid-template-columns: repeat(3, 1fr);
  row-gap: 6vh;
}

.factscard {
  width: 90%;
  border-radius: 25px;
  border: 1px solid rgba(34, 34, 34, 0.205);
  background: linear-gradient(90deg, rgba(217, 217, 217, 0.09) 0%, rgba(217, 217, 217, 0.04) 100%);
  box-shadow: 7px 7px 25px 5px rgba(0, 0, 0, 0.10);
  backdrop-filter: blur(30px);
  color: rgba(255, 255, 255, 0.36);
  font-size: 21px;
  padding: 1.5em;
  font-weight: 400;
  line-height: 102.523%;
  letter-spacing: 0.93px;
  text-align: left;
}

.factscard:nth-child(even) {
  align-self: flex-end;
  background: linear-gradient(90deg, rgba(217, 217, 217, 0.04) 0%, rgba(217, 217, 217, 0.09) 100%);
  grid-column: span 2;
  grid-row: auto;
}

.factscard:nth-child(odd) {
  grid-column: 2 / 4  ;
  grid-row: span 2;
}

.projects {
  height: 20vh;
}

@keyframes rotate {
  from {
    scale: 1 1.3;
  }
  to {
    scale: 1.3 1;
  }
}

